[gd_scene load_steps=2 format=3 uid="uid://u4ycgmlm1u0g"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_1xexc"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_1xexc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.411765)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -109.5
offset_right = 96.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.419608, 0.788235, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="ResetButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Reset Game"

[node name="NormalBG" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Normal Background"

[node name="AWESOMEBG" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "AWESOME Background"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/NormalBG" to="." method="_on_normal_bg_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/AWESOMEBG" to="." method="_on_awesomebg_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
